public/stylesheets/style.css
body {
  padding: 50px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

a {
  color: #00B7FF;
}

#find {
  float: right;
}


#primaryToolbar {
  float: right;
}


.container-fluid {
  float: left;
  color: transparent;
}

#block {
  display: inline-block;
}

.img-fluid {
  max-width: 100%;
  height: auto;
}

.banner {
  background-repeat: no-repeat;
  background-position: right top;
}


.affix-top {
  /* navbar style at top */
  background:transparent;
  border-color:transparent;
  padding: 15px;
}

/* navbar-brand {
  color: transparent;
} */


.navbar {
  width: 100%;
  text-align: center;
}

li {
    float: none;
    display: inline-block;
}


/* carousel!!! ________ */


.carousel {
    margin-bottom: 0;
    padding: 0 40px 30px 40px;
}
/* The controlsy */
.carousel-control {
	left: -12px;
    height: 40px;
	width: 40px;
    background: none repeat scroll 0 0 #222222;
    border: 4px solid #FFFFFF;
    border-radius: 23px 23px 23px 23px;
    margin-top: 90px;
}
.carousel-control.right {
	right: -12px;
}
/* The indicators */
.carousel-indicators {
	right: 50%;
	top: auto;
	bottom: -10px;
	margin-right: -19px;
}
/* The colour of the indicators */
.carousel-indicators li {
	background: #cecece;
}
.carousel-indicators .active {
background: gray;
}



#petsuccess {
  width: 100%;
  text-align: center;
  font-size: 50px;
}

